accounts-ui: resolve flicker with closed dropdown while logging in

--- a/packages/accounts-ui/login_buttons.less
+++ b/packages/accounts-ui/login_buttons.less
@@ -216,10 +216,10 @@
     padding-bottom: 8px;
   }
 
-  &.login-buttons-dropdown-align-left .loading {
+  &.login-buttons-dropdown-align-left #login-dropdown-list .loading {
     float: right;
   }
-  &.login-buttons-dropdown-align-right .loading {
+  &.login-buttons-dropdown-align-right #login-dropdown-list .loading {
     float: left;
   }
 
